[package]
name = "rust-reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
hyper-rustls = "0.23.2"
reqwest = {version = "0.11.14", features=["blocking", "json"]}
http-types = "2.12.0"
bytes = "1.3.0"